--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="./src/type.js"></script>
   </body>
 </html>
